Bug 66564 - EDITING: Enter a formula in a cell if autocalculate is off do not update the screen.
Summary: EDITING: Enter a formula in a cell if autocalculate is off do not update the ...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
4.1.0.0.beta1
Hardware: All All
: medium normal
Assignee: Eike Rathke (retired, only occasionally showing up)
URL:
Whiteboard: target:4.3.0 target:4.2.0.1 target:4.1.4
Keywords: regression
: 65191 (view as bug list)
Depends on:
Blocks:
 
Reported: 2013-07-03 21:31 UTC by m_a_riosv
Modified: 2013-12-10 11:28 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments
Screenshot after enter the formula. (43.82 KB, image/png)
2013-07-03 21:31 UTC, m_a_riosv
Details

Note You need to log in before you can comment on or make changes to this bug.
Description m_a_riosv 2013-07-03 21:31:56 UTC
Created attachment 81992 [details]
Screenshot after enter the formula.

Win7x64 Ultimate
Version: 4.2.0.0.alpha0+ Build ID: 6f86d931b4266d00fec75c0124ac9fc3026a4f1b
TinderBox: Win-x86@6, Branch:master, Time: 2013-07-02_23:36:17

In a new spreadsheet.
Menu/Tools/Cell contents - Disable AutoCalculate
In any cell enter:
=+1+1+1+1+1+1+1+1+1+1+1+1+1+1+1+1

Cell remains in blank, do not show the formula result, and the part of the formula over other cells while editing, it is not cleared.

Works as always in:
Version 4.0.4.2 (Build ID: 9e9821abd0ffdbc09cd8c52eaa574fa09eb08f2)
Comment 1 Ken Biondi 2013-07-04 03:43:35 UTC
I reproduced this bug. 

Confirmed bug in Version: 4.2.0.0.alpha0+
Build ID: 6372309a0d285f4a176dbcded3f18b72220e123

Confirmed not a bug in Version 4.0.4.2 (Build ID: 9e9821abd0ffdbc09cd8c52eaa574fa09eb08f2)

Used WIN 8 x86_64
Comment 2 Commit Notification 2013-12-06 22:04:07 UTC
Eike Rathke committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=2212051e792cb5f51f4191afe83c85fc3730a087

resolved fdo#66564 calculate formula cell once if AutoCalc disabled



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 3 Commit Notification 2013-12-06 22:07:32 UTC
Eike Rathke committed a patch related to this issue.
It has been pushed to "libreoffice-4-2":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=039dadf3b48484ba5d1fc71de5561288e6b7c5cb&h=libreoffice-4-2

resolved fdo#66564 calculate formula cell once if AutoCalc disabled


It will be available in LibreOffice 4.2.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 4 Jorendc 2013-12-06 22:09:21 UTC
bug 65191, looks a dupe like a of this one?
Comment 5 Eike Rathke (retired, only occasionally showing up) 2013-12-06 22:16:37 UTC
Yup, but please don't remove the target from Whiteboard ;-)
Comment 6 Eike Rathke (retired, only occasionally showing up) 2013-12-06 22:17:50 UTC
*** Bug 65191 has been marked as a duplicate of this bug. ***
Comment 7 Eike Rathke (retired, only occasionally showing up) 2013-12-06 22:42:49 UTC
Pending review
for 4-1 at https://gerrit.libreoffice.org/6964
for 4-1-4 at https://gerrit.libreoffice.org/6965
Comment 8 Commit Notification 2013-12-06 23:39:56 UTC
Eike Rathke committed a patch related to this issue.
It has been pushed to "libreoffice-4-1":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=b0a18ae31de70fbd44bf9677ff0f9d01aad5588f&h=libreoffice-4-1

resolved fdo#66564 calculate formula cell once if AutoCalc disabled


It will be available in LibreOffice 4.1.5.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 9 m_a_riosv 2013-12-07 01:16:33 UTC
Thanks Eike.
Comment 10 m_a_riosv 2013-12-07 02:43:31 UTC
Works fine in:
Version: 4.2.0.0.beta2+ Build ID: 039dadf3b48484ba5d1fc71de5561288e6b7c5cb
TinderBox: Win-x86@42, Branch:libreoffice-4-2, Time: 2013-12-06_22:54:58
Comment 11 m_a_riosv 2013-12-08 16:45:15 UTC
Works also in:
Version: 4.1.5.0.0+ Build ID: cb4225144f1fff44f9bb972fe06f51524da11b8
Version: 4.3.0.0.alpha0+ Build ID: c6fe5c6f371328cb6cf61d68f016a04f8b635a48
         TinderBox: Win-x86@39, Branch:master, Time: 2013-12-08_02:58:23
Comment 12 Commit Notification 2013-12-10 11:28:47 UTC
Eike Rathke committed a patch related to this issue.
It has been pushed to "libreoffice-4-1-4":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=549310b41fe732283d82dbd3eb313f3c93f15de8&h=libreoffice-4-1-4

resolved fdo#66564 calculate formula cell once if AutoCalc disabled


It will be available already in LibreOffice 4.1.4.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.