resolved fdo#66564 calculate formula cell once if AutoCalc disabled

Was lost with 2ce72093cdc68e60fb06ddd4358e0bc7fc8c63a9 and previous
restructuring.

(cherry picked from commit 2212051e792cb5f51f4191afe83c85fc3730a087)

Backported.

Change-Id: Ie4c8bdb287b56448406c873840c26ec4759de375